# thoughtful-ai-customer-support-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
backend/: .env.example  app.py  container.py  dependencies.py  models.py  settings.py
backend/services/: chat_service.py  exceptions.py  kb_service.py  llm_client.py  ports.py  rate_limiter.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  api.ts  main.tsx  styles.css
frontend/src/chat/: types.ts
frontend/src/components/: AppHeader.tsx  ChatComposer.tsx  ChatMessageItem.tsx  ChatMessageList.tsx  index.ts
frontend/src/hooks/: useChat.ts
